Styled all content inside the header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Stream TV and Movies Live and Online | Hulu</title>
   </head>
   <body>
-    <h1>test</h1>
+    <header class="header">
+      <nav>
+        <ul>
+          <li>
+            <button class="login-btn">log In</button>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-content">
+        <h4>Disney bundle trio basic</h4>
+        <img src="/logos.png" alt="" class="logo" />
+        <div class="header-text-1">Watch thousands of TV shows and movies</div>
+        <div class="header-text-2">
+          Get Hulu, Disney+, and ESPN+, all with ads, for $12.99/month.
+        </div>
+        <button class="btn btn-cta">Get all three</button>
+        <div class="legal-text">
+          Free trial for new and eligible returning subscribers only.
+        </div>
+      </div>
+    </header>
+    <script src="app.js"></script>
   </body>
 </html>
