created second section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         </div>
       </div>
     </header>
+    <section class="sub-header">
+      <img src="logo.png" alt="" />
+      <div>
+        <h4>Disney bundle duo basic</h4>
+        <h3>Get Hulu & Disney+, both with ads, for $9.99/mo.</h3>
+        <a class="sub-link" href="#">Details</a>
+      </div>
+      <div>
+        <a href="#" class="btn btn-outline">Get them both</a>
+        <a href="#" class="sub-link">Terms apply</a>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
