--- a/index.html
+++ b/index.html
@@ -47,6 +47,44 @@
         <a href="#" class="sub-link">Terms apply</a>
       </div>
     </section>
+    <section class="categories">
+      <h4>Included in all plans</h4>
+      <div class="text-xl">All the TV you love</div>
+      <div class="sub-text">
+        Watch full seasons of exclusively streaming series, current-season
+        episodes, hit movies, Hulu Originals, kids shows, and more.
+      </div>
+      <div class="covers">
+        <div class="cover-1">
+          <div class="cover-grade"></div>
+          <div class="cover-text">
+            <div class="sub-title">Past & Current Seasons</div>
+            <h3>TV Shows</h3>
+          </div>
+        </div>
+        <div class="cover-2">
+          <div class="cover-grade"></div>
+          <div class="cover-text">
+            <div class="sub-title">New & Classic</div>
+            <h3>Movies</h3>
+          </div>
+        </div>
+        <div class="cover-3">
+          <div class="cover-grade"></div>
+          <div class="cover-text">
+            <div class="sub-title">Groundbreaking</div>
+            <h3>Hulu Originals</h3>
+          </div>
+        </div>
+        <div class="cover-4">
+          <div class="cover-grade"></div>
+          <div class="cover-text">
+            <div class="sub-title">Add-on</div>
+            <h3>Premeiums</h3>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
