--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section class="categories">
       <h4>Included in all plans</h4>
-      <div class="text-xl">All the TV you love</div>
+      <div class="text-xl">All The TV You Love</div>
       <div class="sub-text">
         Watch full seasons of exclusively streaming series, current-season
         episodes, hit movies, Hulu Originals, kids shows, and more.
