added third section in html

--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
         </div>
       </div>
     </section>
+    <section class="live">
+      <h4>
+        HULU (WITH ADS) + LIVE TV, NOW WITH DISNEY+ (WITH ADS) AND ESPN+ (WITH
+        ADS)
+      </h4>
+      <div class="text-xl">Live TV Makes It Better</div>
+      <div class="sub-text">
+        Make the switch from cable. Get 85+ top channels on Hulu (With Ads) +
+        Live TV with your favorite live sports, news, and events - plus the
+        entire Hulu streaming library. With Unlimited DVR, store Live TV
+        recordings for up to nine months and fast-forward through your DVR
+        content. Access endless entertainment with Disney+ and live sports with
+        ESPN+.
+      </div>
+      <div class="legal-text">
+        Regional restrictions, blackouts and Live TV terms apply. Access content
+        from each service separately. Location data required to watch certain
+        content. Unlimited DVR recording is not available for on-demand shows.
+      </div>
+      <a href="#">View Channels In Your Area → </a>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
