--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
       </div>
       <a href="#">View Channels In Your Area → </a>
     </section>
+    <section class="live-sports">
+      <div class="live-sports-content">
+        <div class="text-xl">Live Sports</div>
+        <div class="sub-text">
+          Catch your games at home or on the go. Stream live games from major
+          college and pro leagues including the NCAA®, NBA, NHL, NFL, and more.
+        </div>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
