--- a/index.html
+++ b/index.html
@@ -113,6 +113,24 @@
           Catch your games at home or on the go. Stream live games from major
           college and pro leagues including the NCAA®, NBA, NHL, NFL, and more.
         </div>
+        <div class="live-sports-logos">
+          <div>
+            <img src="/live-sports-logo-1.png" alt="" />
+          </div>
+          <div>
+            <img src="/live-sports-logo-2.png" alt="" />
+          </div>
+          <div>
+            <img src="/live-sports-logo-3.svg" alt="" />
+          </div>
+          <div>
+            <img src="/live-sports-logo-4.png" alt="" />
+          </div>
+        </div>
+        <div class="legal-text">
+          Live TV plan required. Regional restrictions, blackouts and additional
+          terms apply. See details
+        </div>
       </div>
     </section>
     <script src="app.js"></script>
