--- a/index.html
+++ b/index.html
@@ -177,6 +177,35 @@
         <div class="social-icons"></div>
       </div>
     </footer>
+    <div class="modal">
+      <div class="modal-box">
+        <div class="modal-body">
+          <h3>Log In</h3>
+          <p>
+            You will use this email and password to log into your accounts for
+            all your favorite services across The Walt Disney Family of
+            Companies, including Disney+, Hulu and ESPN+.
+            <a href="#">Learn more</a>
+          </p>
+          <form>
+            <div class="form-control">
+              <label for="email">Email</label>
+              <input type="email" id="email" />
+            </div>
+            <div class="form-control">
+              <label for="password">Password</label>
+              <input type="password" id="password" />
+            </div>
+            <p><a href="#">Forgot your emai or password?</a></p>
+            <button class="btn btn-dark">Log In</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <p>Don't have an account? <a href="#">Start your free trial</a></p>
+        </div>
+        <img class="close" src="/close.svg" alt="close" />
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
