fixed spelling errors and added open source tag

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="cover-grade"></div>
           <div class="cover-text">
             <div class="sub-title">Add-on</div>
-            <h3>Premeiums</h3>
+            <h3>Premiums</h3>
           </div>
         </div>
       </div>
@@ -176,7 +176,16 @@
         <div class="divider"></div>
         <div class="social-icons"></div>
       </div>
-    </footer>
+      <small>
+          <a
+            href="https://github.com/5Savage/hulu-clone"
+            target="_blank"
+          >
+            Open-source code
+          </a>
+          by Myah Savage
+        </small>
+
     <div class="modal">
       <div class="modal-box">
         <div class="modal-body">
